--- a/nitaqat-report.html
+++ b/nitaqat-report.html
@@ -9,8 +9,7 @@
       <script src="confing.js"></script>
       <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"  rel="stylesheet" />
       <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-<body style="
-    font-family: Janna LT;">
+<body class="font-['Janna_LT']">
  </head>
  <aside class="ml-[-100%] fixed z-10 top-0  px-4 w-full hidden lg:flex flex-col justify-between h-screen border-l bg-white transition duration-300 md:w-4/12 lg:ml-0 lg:w-[25%] xl:w-[20%] 2xl:w-[15%]">
     <div>
@@ -322,14 +321,10 @@
     </nav>
 </header>
 <main class=" w-full mt-[81px]  lg:mt-[104px] lg:mr-[25%] xl:mr-[20%] 2xl:mr-[15%] mb-6 lg:w-[75%] xl:w-[80%] 2xl:w-[85%] ">
-<section>
+    <section>
     <div class="flex mt-[101px] md:mt-[151px] xl:mt-40 mr-1 sm:mr-[2.5%] ">
         <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline"> الاشتراكات <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline">>الفروع </h4> <h2 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline "> > </h2> <h4 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline ">منشأة امل الخير</h4></h4>
     </div>
-
-
-
-    <!-- /////////////////////// -->
     <div class="2xl:flex ">
         <div class="mt-3 mb-1.5 mr-1 sm:mr-[2.5%]">
             <h3 class="	text-[11px] sm:text-base xl:text-xl ">الرجاء تعبئة جميع الحقول والتأكد من البيانات للحصول على نتائج صحيحة</h3>
@@ -339,163 +334,140 @@
                 <h4 class="text-[#25A0D5] text-[10px] md:text-base xl:text-xl 2xl:leading-[50px] sm:mr-1 underline ">دليل الإستخدام من هنا</h4></h4>
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!--//////////////////////////////////// -->
+    </section>
+    <section>
         <div class="mt-5 mx-5 grid gap-5 grid-cols-1 sm:grid-cols-2 xl:grid-cols-4">
             <div class="">
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
                 <select class="mt-4 w-full h-[46px] text-sm md:text-base text-[#25A0D5] px-4 py-3 rounded-[10px] bg-white focus:bg-white border border-[#F5F5F5] focus:outline-none focus:border-cyan-300 block text-start" style="box-shadow: 0px 4px 20px 0px rgba(184, 184, 184, 0.15);">
                     <option class="text-black"  selected>اختر شركة</option>
                     <option class="text-black" >اطياب الوادي</option>
                 </select>
             </div>
             <div class="">
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
                 <select class="mt-4 w-full h-[46px] text-sm md:text-base text-[#25A0D5] px-4 py-3 rounded-[10px] bg-white focus:bg-white border border-[#F5F5F5] focus:outline-none focus:border-cyan-300 block text-start" style="box-shadow: 0px 4px 20px 0px rgba(184, 184, 184, 0.15);">
                     <option class="text-black"  selected>اختر شركة</option>
                     <option class="text-black" >اطياب الوادي</option>
                 </select>
             </div>
             <div class="">
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
                 <select class="mt-4 w-full h-[46px] text-sm md:text-base text-[#25A0D5] px-4 py-3 rounded-[10px] bg-white focus:bg-white border border-[#F5F5F5] focus:outline-none focus:border-cyan-300 block text-start" style="box-shadow: 0px 4px 20px 0px rgba(184, 184, 184, 0.15);">
                     <option class="text-black"  selected>اختر شركة</option>
                     <option class="text-black" >اطياب الوادي</option>
                 </select>
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>هل توجد فروع مرتبطة بالمنشأة</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>هل توجد فروع مرتبطة بالمنشأة</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد الأجانب</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد الأجانب</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد الأجيرين</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد الأجيرين</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين برواتب أقل من 3000 </label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين برواتب أقل من 3000 </label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين برواتب بين 3000 - 3999</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين برواتب بين 3000 - 3999</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين برواتب 4000 وأعلى</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين برواتب 4000 وأعلى</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد لاعبين الأندية الرياضية</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد لاعبين الأندية الرياضية</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد السجناء المفرج عنهم</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد السجناء المفرج عنهم</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد المعاقين</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد المعاقين</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد العامل عن بعد</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد العامل عن بعد</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد الطلاب</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد الطلاب</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد اجانب معفين من الإبعاد ويعاملون كالسعودي</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد اجانب معفين من الإبعاد ويعاملون كالسعودي</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد اجانب معفين من الإبعاد ويعاملون كوافدين</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد اجانب معفين من الإبعاد ويعاملون كوافدين</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>معار</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>معار</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد مواطنين مجلس التعاون</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد مواطنين مجلس التعاون</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد القبائل النازحة</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد القبائل النازحة</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد الوافد الخاص</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد الوافد الخاص</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>المالك</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>المالك</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد تأشيرات مصدرة ولم تستخدم</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد تأشيرات مصدرة ولم تستخدم</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد طلبات نقل كفالة مرسلة ولم تكتمل</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد طلبات نقل كفالة مرسلة ولم تكتمل</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين بالحالات الخاصة</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين بالحالات الخاصة</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>عدد الأجانب بالحالات الخاصة</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد الأجانب بالحالات الخاصة</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>هل كانت المنشأة بالنطاق الأحمر في اخر 4أسابيع متصلة او 8أسابيع</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>هل كانت المنشأة بالنطاق الأحمر في اخر 4أسابيع متصلة او 8أسابيع</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
             <div>
-                <label class=""><span style="font-family:El Messiri" class="text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
                 <div class="flex gap-2 items-center mt-4">
                     <label for="">نعم</label>
-                    <input type="checkbox" class="rounded-full">
+                    <input type="radio" name="radio-group" class="rounded-full">
                     <label for="">لا</label>
-                    <input type="checkbox" class="rounded-full">
+                    <input type="radio" name="radio-group" class="rounded-full">
 
                 </div>
             </div>
 
 
         </div>
-        <!-- ////////////// -->
-
-
-
-
-
-
-
-
-
-</section>
+    </section>
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
 </body>
