--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="Add-a-branch.html">أضف فرع جديد</a>
         <a href="subscriptions.html">الإشتراكات جيديد</a>
         <a href="view-branch-data.html">الفروع</a>
+        <a href="new_workers.html">العمالة المحتسبين جديد</a>
     </div>
 </body>
 </html>
