add font-[Inter] to listes

--- a/nationality-ratios.html
+++ b/nationality-ratios.html
@@ -405,7 +405,7 @@
                     </tr>
             </thead>
             <tbody>
-                <tr class="flex justify-around bg-[#F5F5F5] items-center h-10 border-b border-b-[#D7D7D7] gap-[11px] text-justfiy rounded-t-2xl px-[10px]">
+                <tr class="flex justify-around bg-[#F5F5F5] items-center h-10 border-b border-b-[#D7D7D7] gap-[11px] text-justfiy rounded-t-2xl px-[10px] font-[Inter]">
                     <td class="w-[15%]">باكستاني</td>
                     <td class="w-[15%]">15</td>
                     <td class="w-[15%]">50%</td>
@@ -415,7 +415,7 @@
                 </tr>
             </tbody>
             <tbody>
-                <tr class="flex justify-around bg-[#F5F5F5] items-center h-10 border-b border-b-[#D7D7D7] gap-[11px] text-justfiy px-[10px]">
+                <tr class="flex justify-around bg-[#F5F5F5] items-center h-10 border-b border-b-[#D7D7D7] gap-[11px] text-justfiy px-[10px] font-[Inter]">
                     <td class="w-[15%]">باكستاني</td>
                     <td class="w-[15%]">15</td>
                     <td class="w-[15%]">50%</td>
@@ -425,7 +425,7 @@
                 </tr>
             </tbody>
             <tbody>
-                <tr class="flex justify-around bg-[#F5F5F5] items-center h-10  gap-[11px] text-justfiy rounded-b-2xl px-[10px]">
+                <tr class="flex justify-around bg-[#F5F5F5] items-center h-10  gap-[11px] text-justfiy rounded-b-2xl px-[10px] font-[Inter]">
                     <td class="w-[15%]">باكستاني</td>
                     <td class="w-[15%]">15</td>
                     <td class="w-[15%]">50%</td>
