--- a/native_professions.html
+++ b/native_professions.html
@@ -361,7 +361,7 @@
                     </tr>
             </thead>
             <tbody>
-                <tr class="flex justify-around bg-[#F5F5F5] items-center border-b border-b-[#D7D7D7] gap-1 md:gap-8 xl:gap-11 text-justfiy rounded-t-2xl px-[10px]">
+                <tr class="flex justify-around bg-[#F5F5F5] items-center border-b border-b-[#D7D7D7] gap-1 md:gap-8 xl:gap-11 text-justfiy rounded-t-2xl px-[10px] font-[Inter]">
                     <td class="w-[15%]">المبيعات</td>
                     <td class="w-[15%]">لا</td>
                     <td class="w-[15%]">محمد انور
@@ -377,7 +377,7 @@
                 </tr>
             </tbody>
             <tbody>
-                <tr class="flex justify-around bg-[#F5F5F5] items-center border-b border-b-[#D7D7D7] gap-1 md:gap-8 xl:gap-11 text-justfiy  px-[10px]">
+                <tr class="flex justify-around bg-[#F5F5F5] items-center border-b border-b-[#D7D7D7] gap-1 md:gap-8 xl:gap-11 text-justfiy  px-[10px] font-[Inter]">
                     <td class="w-[15%]">المشتريات</td>
                     <td class="w-[15%]">نعم</td>
                     <td class="w-[15%]">
@@ -403,7 +403,7 @@
                 </tr>
             </tbody>
             <tbody>
-                <tr class="flex justify-around bg-[#F5F5F5] items-center  gap-1 md:gap-8 xl:gap-11 text-justfiy  rounded-b-2xl px-[10px]">
+                <tr class="flex justify-around bg-[#F5F5F5] items-center  gap-1 md:gap-8 xl:gap-11 text-justfiy  rounded-b-2xl px-[10px] font-[Inter]">
                     <td class="w-[15%]">المحاسبة</td>
                     <td class="w-[15%]">لا</td>
                     <td class="w-[15%]">
