--- a/nitaqat_report_results.html
+++ b/nitaqat_report_results.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nationality ratios</title>
-      <script src="https://cdn.tailwindcss.com"></script>
-      <script src="confing.js"></script>
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"  rel="stylesheet" />
-      <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <title>Nitaqat report results</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="confing.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"  rel="stylesheet" />
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     </head>
 <body class="font-['Janna_LT']">
- <aside class="ml-[-100%] fixed z-10 top-0  px-4 w-full hidden lg:flex flex-col justify-between h-screen border-l bg-white transition duration-300 md:w-4/12 lg:ml-0 lg:w-[25%] xl:w-[20%] 2xl:w-[15%]">
+<aside class="ml-[-100%] fixed z-10 top-0  px-4 w-full hidden lg:flex flex-col justify-between h-screen border-l bg-white transition duration-300 md:w-4/12 lg:ml-0 lg:w-[25%] xl:w-[20%] 2xl:w-[15%]">
     <div>
 
         <div class="flex mt-8 text-center">
@@ -124,8 +124,8 @@
   </defs>
 </svg>
     </a>
- </aside>
- <header class="fixed top-0 z-[99] w-full h-[104px] lg:mr-[25%] xl:mr-[20%] 2xl:mr-[15%] mb-6 lg:w-[75%] xl:w-[80%] 2xl:w-[85%]">
+</aside>
+<header class="fixed top-0 z-[99] w-full h-[104px] lg:mr-[25%] xl:mr-[20%] 2xl:mr-[15%] mb-6 lg:w-[75%] xl:w-[80%] 2xl:w-[85%]">
     <nav class="bg-white border-b border-gray-200 lg:p-0 dark:bg-gray-800 pt-5 lg:shadow-none shadow-md">
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl w-full">
             <div class="flex justify-between w-full pb-5">
