--- a/reports.html
+++ b/reports.html
@@ -292,7 +292,7 @@
                         </a>
                     </li>
                     <li>
-                        
+
                         <a href="main.html">
                             <svg class="cursor-pointer m-auto mb-[30%]" xmlns="http://www.w3.org/2000/svg" width="58" height="35" viewBox="0 0 58 35" fill="none">
                                 <g clip-path="url(#clip0_1323_14325)">
@@ -353,8 +353,8 @@
             <th>تحميل</th>
           </tr>
         </thead>
-        <tbody>    
-            <tr class="flex justify-around bg-[#F5F5F5] items-center h-10 mb-5 gap-[11px] text-justfiy rounded-xl px-[10px]">
+        <tbody>
+            <tr class="flex justify-around bg-[#F5F5F5] items-center h-10 mb-5 gap-[11px] text-justfiy rounded-xl px-[10px] font-[Inter]">
                 <td class="max-w-[100px]">#435463</td>
                 <td class="max-w-[100px]">شركة كذا</td>
                 <td>12345678901</td>
