edit frist section

--- a/calculator.html
+++ b/calculator.html
@@ -323,7 +323,7 @@
     <div class="flex mt-[101px] md:mt-[151px] xl:mt-40 mr-1 sm:mr-[2.5%] ">
         <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline"> الاشتراكات <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline">>الفروع </h4> <h2 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline "> > </h2> <h4 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline ">منشأة امل الخير</h4></h4>
     </div>
-    <div class="2xl:flex ">
+    <div class="">
         <div class="mt-3 mb-1.5 mr-1 sm:mr-[2.5%]">
             <h3 class="	text-[11px] sm:text-base xl:text-xl ">هي حاسبة تفاعلية تمكن صاحب العمل من حساب نطاق المنشأة ورصيد الاستقطاب وكيفية تحسينه وبناء خططه المستقبلية في عملية التوظيف</h3>
         </div>
