edit font from css style to taliwind

--- a/new_localizition.html
+++ b/new_localizition.html
@@ -10,8 +10,7 @@
       <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 
-<body style="
-    font-family: Janna LT;">
+<body class="font-['Janna_LT']">
 <aside class="ml-[-100%] fixed z-10 top-0  px-4 w-full hidden lg:flex flex-col justify-between h-screen border-l bg-white transition duration-300 md:w-4/12 lg:ml-0 lg:w-[25%] xl:w-[20%] 2xl:w-[15%]">
     <div>
 
@@ -334,8 +333,8 @@
         <ol class="text-xs md:text-sm lg:text-base mx-[2.5%] flex flex-col gap-2 list-disc list-inside mt-3 md:mt-5 w-[70%]">
             <li>
                 عند رفع الملفات المطلوب قراءتها في هذا التقرير تأكد من رفع ملفات المنشآت المرتبطة في نفس الكيان ويمكن معرفة المنشآت المرتبطة من خلال حساب المنشأة
-                في موقع وزارة الموارد البشرية. لمعرفة المنشآت المرتبطة اذهب إلى 
-                <a href="#" class="text-[#147EF9] underline"> 
+                في موقع وزارة الموارد البشرية. لمعرفة المنشآت المرتبطة اذهب إلى
+                <a href="#" class="text-[#147EF9] underline">
                     دليل الإستخدام من هنا
                 </a>
             </li>
@@ -351,7 +350,7 @@
             <div class="flex items-center justify-center w-[95%] sm:w-1/2 m-auto mx-[2.5%]">
                 <label for="dropzone-file" class="flex flex-col items-center justify-center w-full border border-[#25A0D5] border-dashed rounded-lg cursor-pointer bg-[#F5F5F5] dark:hover:bg-bray-800 dark:bg-gray-700 hover:bg-gray-100 dark:border-gray-600 dark:hover:border-gray-500 dark:hover:bg-gray-600">
                     <div class="flex items-center justify-center pt-5 pb-6">
-                        <p class="ml-5">اضغط لتحديد الملف أو 
+                        <p class="ml-5">اضغط لتحديد الملف أو
                             <br>
                             قم بسحب وإفلات الملف
                         </p>
@@ -371,11 +370,11 @@
                     </div>
                     <input id="dropzone-file" type="file" class="hidden" />
                 </label>
-            </div> 
+            </div>
 
         </div>
         <h4 class="mt-[53px] text-xl font-bold mx-[2.5%]">الفروع</h4>
-        
+
         <div class="flex flex-col sm:flex-row w-full justify-around mt-8">
             <div class="flex items-center mb-3 sm:mb-3">
                 <h2 class="text-[#25A0D5] text-[20px] xl:text-[26px] font-bold m-auto">إلمام العربية لتقنية المعلومات</h2>
@@ -383,7 +382,7 @@
             <div class="flex items-center justify-center w-[95%] sm:w-1/2 m-auto mx-[2.5%]">
                 <label for="dropzone-file" class="flex flex-col items-center justify-center w-full border border-[#25A0D5] border-dashed rounded-lg cursor-pointer bg-[#F5F5F5] dark:hover:bg-bray-800 dark:bg-gray-700 hover:bg-gray-100 dark:border-gray-600 dark:hover:border-gray-500 dark:hover:bg-gray-600">
                     <div class="flex items-center justify-center pt-5 pb-6">
-                        <p class="ml-5">اضغط لتحديد الملف أو 
+                        <p class="ml-5">اضغط لتحديد الملف أو
                             <br>
                             قم بسحب وإفلات الملف
                         </p>
@@ -403,7 +402,7 @@
                     </div>
                     <input id="dropzone-file" type="file" class="hidden" />
                 </label>
-            </div> 
+            </div>
 
         </div>
     </section>
