--- a/calculator.html
+++ b/calculator.html
@@ -334,6 +334,37 @@
     </div>
     </section>
     <section>
+        <fieldset class="border-[#A7A7A7] border m-6 my-3 py-[37px] px-6 md:px-10 xl:px-20 rounded-t-lg">
+            <legend class="text-xs md:text-sm text-[#25A0D5] font-bold px-1">أدخل البيانات لحساب نطاق المنشأة</legend>
+            <div class="block sm:flex justify-between">
+                <div class="mb-[33px] sm:mb-0 font-normal text-base gap-1 items-center ">
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
+                <select class="mt-4 w-full h-[46px] text-sm md:text-base text-[#25A0D5] px-4 py-3 rounded-[10px] bg-white focus:bg-white border border-[#F5F5F5] focus:outline-none focus:border-cyan-300 block text-start" style="box-shadow: 0px 4px 20px 0px rgba(184, 184, 184, 0.15);">
+                    <option class="text-black"  selected>اختر شركة</option>
+                    <option class="text-black" >اطياب الوادي</option>
+                </select>
+                </div>
+                <div class="font-normal text-base  gap-1 items-center">
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
+                <select class="mt-4 w-full h-[46px] text-sm md:text-base text-[#25A0D5] px-4 py-3 rounded-[10px] bg-white focus:bg-white border border-[#F5F5F5] focus:outline-none focus:border-cyan-300 block text-start" style="box-shadow: 0px 4px 20px 0px rgba(184, 184, 184, 0.15);">
+                    <option class="text-black"  selected>اختر شركة</option>
+                    <option class="text-black" >اطياب الوادي</option>
+                </select>
+                </div>
+            </div>
+            <div class="block sm:flex justify-between mt-[33px]">
+                <div class="mb-[33px] sm:mb-0 font-normal text-base gap-1 items-center ">
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين بالحالات الخاصة</label>
+                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
+            </div>
+            <div class="font-normal text-base  gap-1 items-center ml-[30px]">
+                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد الأجانب بالحالات الخاصة</label>
+                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
+                </div>
+            </div>
+        </fieldset>
+    </section>
+    <section>
         <fieldset class="mt-5 mx-5 grid gap-5 grid-cols-1 sm:grid-cols-2 border-[#D2D2D2] border mt-4 mx-5 sm:mx-15 md:mx-20 xl:mx-36  py-3 px-5 md:py-8 md:px-10 rounded-t-lg">
             <legend class="text-xs md:text-sm text-[#25A0D5] font-bold px-1">أدخل البيانات لحساب نطاق المنشأة</legend>
             <div class="sm:max-w-[338px]">
@@ -361,134 +392,31 @@
         </fieldset>
     </section>
     <section>
-        <div class="mt-5 mx-5 grid gap-5 grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4">
-            <div class="">
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
-                <select class="mt-4 w-full h-[46px] text-sm md:text-base text-[#25A0D5] px-4 py-3 rounded-[10px] bg-white focus:bg-white border border-[#F5F5F5] focus:outline-none focus:border-cyan-300 block text-start" style="box-shadow: 0px 4px 20px 0px rgba(184, 184, 184, 0.15);">
-                    <option class="text-black"  selected>اختر شركة</option>
-                    <option class="text-black" >اطياب الوادي</option>
-                </select>
-            </div>
-            <div class="">
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
-                <select class="mt-4 w-full h-[46px] text-sm md:text-base text-[#25A0D5] px-4 py-3 rounded-[10px] bg-white focus:bg-white border border-[#F5F5F5] focus:outline-none focus:border-cyan-300 block text-start" style="box-shadow: 0px 4px 20px 0px rgba(184, 184, 184, 0.15);">
-                    <option class="text-black"  selected>اختر شركة</option>
-                    <option class="text-black" >اطياب الوادي</option>
-                </select>
-            </div>
-            <div class="">
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
-                <select class="mt-4 w-full h-[46px] text-sm md:text-base text-[#25A0D5] px-4 py-3 rounded-[10px] bg-white focus:bg-white border border-[#F5F5F5] focus:outline-none focus:border-cyan-300 block text-start" style="box-shadow: 0px 4px 20px 0px rgba(184, 184, 184, 0.15);">
-                    <option class="text-black"  selected>اختر شركة</option>
-                    <option class="text-black" >اطياب الوادي</option>
-                </select>
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>هل توجد فروع مرتبطة بالمنشأة</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد الأجانب</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد الأجيرين</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين برواتب أقل من 3000 </label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين برواتب بين 3000 - 3999</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين برواتب 4000 وأعلى</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد لاعبين الأندية الرياضية</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد السجناء المفرج عنهم</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد المعاقين</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد العامل عن بعد</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد الطلاب</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد اجانب معفين من الإبعاد ويعاملون كالسعودي</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد اجانب معفين من الإبعاد ويعاملون كوافدين</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>معار</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد مواطنين مجلس التعاون</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد القبائل النازحة</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد الوافد الخاص</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>المالك</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد تأشيرات مصدرة ولم تستخدم</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد طلبات نقل كفالة مرسلة ولم تكتمل</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين بالحالات الخاصة</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد الأجانب بالحالات الخاصة</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد الاسابيع الحمراء</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div>
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>هل توجد شهادة موائمة للمنشأة</label>
-                <div class="flex gap-2 items-center mt-4">
-                    <label for="">نعم</label>
-                    <input type="radio" name="radio-group" class="rounded-full">
-                    <label for="">لا</label>
-                    <input type="radio" name="radio-group" class="rounded-full">
+<fieldset class="border-[#A7A7A7] border m-6 my-3 py-2 px-2 rounded-t-lg">
+            <legend class="text-xs xl:text-sm text-[#25A0D5] font-bold px-1">نتائج الدراسة</legend>
+            <div class="flex-col-reverse md:flex-row flex justify-between">
+                <div class="w-full md:w-[60%] flex flex-col gap-5">
+                    <div class="text-xs flex justify-between items-center rounded">
+                        <p>معامل نسبة التوطين</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                    <div class="text-xs flex justify-between items-center rounded">
+                        <p>عدد الأجانب الذي يمكن إضافته دون النزول عن النطاق الحالي</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                    <div class="text-xs flex justify-between items-center rounded">
+                        <p>عدد السعوديين الذي يمكن استبعاده دون النزول عن النطاق الحالي</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">0</p>
+                    </div>
+                </div>
+                <div class="m-auto">
+                    <h4 class="">النطاق الحالي</h4>
+                        <p class="border-[15px] border-[#88BF4F] rounded-[50%] h-[100px] w-[100px] text-sm text-center items-center flex">
+                        اخضر متوسط
+                        </p>
                 </div>
             </div>
-        </div>
+        </fieldset>
     </section>
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
