--- a/calculator.html
+++ b/calculator.html
@@ -364,7 +364,7 @@
             </div>
         </fieldset>
     </section>
-    <!-- <section>
+    <section>
         <fieldset class="mt-5 mx-5 grid gap-5 grid-cols-1 sm:grid-cols-2 border-[#D2D2D2] border mt-4 mx-5 sm:mx-15 md:mx-20 xl:mx-36  py-3 px-5 md:py-8 md:px-10 rounded-t-lg">
             <legend class="text-xs md:text-sm text-[#25A0D5] font-bold px-1">أدخل البيانات لحساب نطاق المنشأة</legend>
             <div class="sm:max-w-[338px]">
@@ -390,7 +390,7 @@
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
         </fieldset>
-    </section> -->
+    </section>
     <section>
 <fieldset class="border-[#A7A7A7] border m-6 my-3 py-2 px-2 rounded-t-lg">
             <legend class="text-xs xl:text-sm text-[#25A0D5] font-bold px-1">نتائج الدراسة</legend>
