--- a/calculator.html
+++ b/calculator.html
@@ -12,12 +12,10 @@
 <body class="font-['Janna_LT']">
 <aside class="ml-[-100%] fixed z-10 top-0  px-4 w-full hidden lg:flex flex-col justify-between h-screen border-l bg-white transition duration-300 md:w-4/12 lg:ml-0 lg:w-[25%] xl:w-[20%] 2xl:w-[15%]">
     <div>
-
         <div class="flex mt-8 text-center">
             <img src="imges/Ellipse 76.svg" alt="" class="ml-2">
             <h5 class="hidden mt-2 text-[10px] leading-5 font-bold  lg:block">farhan.alaiban@gmail.com</h5>
         </div>
-
         <ul class="tracking-wide mt-8 leading-5 text-sm font-normal">
             <li>
                 <a href="dashboard.html" aria-label="dashboard" class="group/item1 relative mb-7 flex items-center rounded-lg hover:bg-[#F5F5F5] hover:py-2 hover:text-[#25A0D5] focus:bg-[#F5F5F5] focus:py-2 focus:text-[#25A0D5]">
@@ -318,7 +316,7 @@
         </div>
     </nav>
 </header>
-<main class=" w-full mt-[81px]  lg:mt-[104px] lg:mr-[25%] xl:mr-[20%] 2xl:mr-[15%] mb-6 lg:w-[75%] xl:w-[80%] 2xl:w-[85%] ">
+<main class=" w-full mt-[81px] lg:mt-[104px] lg:mr-[25%] xl:mr-[20%] 2xl:mr-[15%] mb-6 lg:w-[75%] xl:w-[80%] 2xl:w-[85%] ">
     <section class="mr-[5%]">
     <div class="flex mt-[101px] md:mt-[151px] xl:mt-40 mr-1 sm:mr-[2.5%] ">
         <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline"> الاشتراكات <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline">>الفروع </h4> <h2 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline "> > </h2> <h4 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline ">منشأة امل الخير</h4></h4>
@@ -334,17 +332,17 @@
     </div>
     </section>
     <section>
-        <fieldset class="border-[#A7A7A7] border m-6 my-3 py-[37px] px-6 md:px-10 xl:px-20 rounded-t-lg">
+        <fieldset class="border-[#A7A7A7] border mt-5 md:mt-8 mx-5 sm:mx-15 md:mx-20 xl:mx-36 xl:mt-20 py-3 md:py-6 px-5 md:px-10 rounded-t-lg">
             <legend class="text-xs md:text-sm text-[#25A0D5] font-bold px-1">أدخل البيانات لحساب نطاق المنشأة</legend>
-            <div class="block sm:flex justify-between">
-                <div class="mb-[33px] sm:mb-0 font-normal text-base gap-1 items-center ">
+            <div class=" block sm:flex justify-between">
+                <div class="sm:max-w-[338px] sm:w-2/5 mb-[33px] sm:mb-0 font-normal text-base gap-1 items-center ">
                 <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
                 <select class="mt-4 w-full h-[46px] text-sm md:text-base text-[#25A0D5] px-4 py-3 rounded-[10px] bg-white focus:bg-white border border-[#F5F5F5] focus:outline-none focus:border-cyan-300 block text-start" style="box-shadow: 0px 4px 20px 0px rgba(184, 184, 184, 0.15);">
                     <option class="text-black"  selected>اختر شركة</option>
                     <option class="text-black" >اطياب الوادي</option>
                 </select>
                 </div>
-                <div class="font-normal text-base  gap-1 items-center">
+                <div class="sm:max-w-[338px] sm:w-2/5 font-normal text-base  gap-1 items-center">
                 <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
                 <select class="mt-4 w-full h-[46px] text-sm md:text-base text-[#25A0D5] px-4 py-3 rounded-[10px] bg-white focus:bg-white border border-[#F5F5F5] focus:outline-none focus:border-cyan-300 block text-start" style="box-shadow: 0px 4px 20px 0px rgba(184, 184, 184, 0.15);">
                     <option class="text-black"  selected>اختر شركة</option>
@@ -353,11 +351,11 @@
                 </div>
             </div>
             <div class="block sm:flex justify-between mt-[33px]">
-                <div class="mb-[33px] sm:mb-0 font-normal text-base gap-1 items-center ">
+                <div class="sm:max-w-[338px] sm:w-2/5 mb-[33px] sm:mb-0 font-normal text-base gap-1 items-center ">
                 <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين بالحالات الخاصة</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
             </div>
-            <div class="font-normal text-base  gap-1 items-center ml-[30px]">
+            <div class="sm:max-w-[338px] sm:w-2/5 font-normal text-base  gap-1 items-center ">
                 <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد الأجانب بالحالات الخاصة</label>
                 <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
                 </div>
@@ -365,34 +363,7 @@
         </fieldset>
     </section>
     <section>
-        <fieldset class="mt-5 mx-5 grid gap-5 grid-cols-1 sm:grid-cols-2 border-[#D2D2D2] border mt-4 mx-5 sm:mx-15 md:mx-20 xl:mx-36  py-3 px-5 md:py-8 md:px-10 rounded-t-lg">
-            <legend class="text-xs md:text-sm text-[#25A0D5] font-bold px-1">أدخل البيانات لحساب نطاق المنشأة</legend>
-            <div class="sm:max-w-[338px]">
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
-                <select class="mt-4 w-full h-[46px] text-sm md:text-base text-[#25A0D5] px-4 py-3 rounded-[10px] bg-white focus:bg-white border border-[#F5F5F5] focus:outline-none focus:border-cyan-300 block text-start" style="box-shadow: 0px 4px 20px 0px rgba(184, 184, 184, 0.15);">
-                    <option class="text-black"  selected>اختر شركة</option>
-                    <option class="text-black" >اطياب الوادي</option>
-                </select>
-            </div>
-            <div class="sm:max-w-[338px]">
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>اسم الشركة</label>
-                <select class="mt-4 w-full h-[46px] text-sm md:text-base text-[#25A0D5] px-4 py-3 rounded-[10px] bg-white focus:bg-white border border-[#F5F5F5] focus:outline-none focus:border-cyan-300 block text-start" style="box-shadow: 0px 4px 20px 0px rgba(184, 184, 184, 0.15);">
-                    <option class="text-black"  selected>اختر شركة</option>
-                    <option class="text-black" >اطياب الوادي</option>
-                </select>
-            </div>
-            <div class="sm:max-w-[338px]">
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>هل توجد فروع مرتبطة بالمنشأة</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-            <div class="sm:max-w-[338px]">
-                <label class=""><span  class="font-['El_Messiri'] text-[#E80F0F] font-bold text-xl ">*</span>عدد السعوديين</label>
-                <input class="mt-4 w-full h-[46px] text-sm md:text-base px-4 py-3 bg-neutral-100 focus:bg-gray-100 border  border-gray-200 rounded-[10px] focus:outline-none focus:border-purple-400 block text-start">
-            </div>
-        </fieldset>
-    </section>
-    <section>
-<fieldset class="border-[#A7A7A7] border m-6 my-3 py-2 px-2 rounded-t-lg">
+<fieldset class="border-[#A7A7A7] border mt-7  mx-5 sm:mx-15 md:mx-20 xl:mx-36 py-3 md:py-6 px-5 md:px-10 rounded-t-lg">
             <legend class="text-xs xl:text-sm text-[#25A0D5] font-bold px-1">نتائج الدراسة</legend>
             <div class="flex-col-reverse md:flex-row flex justify-between">
                 <div class="w-full md:w-[60%] flex flex-col gap-5">
