finished the page

--- a/calculator.html
+++ b/calculator.html
@@ -317,7 +317,7 @@
     </nav>
 </header>
 <main class=" w-full mt-[81px] lg:mt-[104px] lg:mr-[25%] xl:mr-[20%] 2xl:mr-[15%] mb-6 lg:w-[75%] xl:w-[80%] 2xl:w-[85%] ">
-    <section class="mr-[5%]">
+    <section class="mr-[2.5%]">
     <div class="flex mt-[101px] md:mt-[151px] xl:mt-40 mr-1 sm:mr-[2.5%] ">
         <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline"> الاشتراكات <h4 class="text-[#BDBDBD] text-xs md:text-base xl:text-xl underline">>الفروع </h4> <h2 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline "> > </h2> <h4 class="text-[#25A0D5] text-xs md:text-base xl:text-xl underline ">منشأة امل الخير</h4></h4>
     </div>
@@ -332,7 +332,7 @@
     </div>
     </section>
     <section>
-        <fieldset class="border-[#A7A7A7] border mt-5 md:mt-8 mx-5 sm:mx-15 md:mx-20 xl:mx-36 xl:mt-20 py-3 md:py-6 px-5 md:px-10 rounded-t-lg">
+        <fieldset class="border-[#A7A7A7] border mt-7 mx-5 sm:mx-15 md:mx-20 xl:mx-36  py-3 md:py-6 px-5 md:px-10 rounded-t-lg">
             <legend class="text-xs md:text-sm text-[#25A0D5] font-bold px-1">أدخل البيانات لحساب نطاق المنشأة</legend>
             <div class=" block sm:flex justify-between">
                 <div class="sm:max-w-[338px] sm:w-2/5 mb-[33px] sm:mb-0 font-normal text-base gap-1 items-center ">
@@ -388,6 +388,123 @@
                 </div>
             </div>
         </fieldset>
+    </section>
+    <section>
+        <h2 class="mr-[2.5%] mt-7 text-xl" >لتحسين حالة النطاق ورصيد الاستقطاب</h2>
+        <div class="mx-[2.5%] gap-8 grid sm:grid-cols-2">
+            <div>
+                <fieldset class="sm:flex border-[#A7A7A7] border mt-7 py-2.5 md:py-2.5 px-2.5 md:px-2.5 rounded-lg">
+            <legend class="text-xs md:text-sm bg-[#BFE09D] rounded-lg font-bold px-1">للإنتقال للنطاق الأخضر المنخفض</legend>
+                <div class="w-full md:w-[60%] flex flex-col gap-5">
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>توظيف سعوديين بعدد</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>سيكون رصيد الاستقطاب</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                </div>
+                <div class="text-center sm:flex">
+                    <h4 class="text-center sm:flex sm:items-center py-2 px-2 text-sm font-medium">او</h4>
+                </div>
+                    <div class="w-full md:w-[60%] flex flex-col gap-5">
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>توظيف سعوديين بعدد</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>سيكون رصيد الاستقطاب</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                </div>
+        </fieldset>
+            </div>
+                <div class="">
+                <fieldset class="sm:flex border-[#A7A7A7] border mt-7 py-2.5 md:py-2.5 px-2.5 md:px-2.5 rounded-lg">
+            <legend class="text-xs md:text-sm bg-[#88BF4F] rounded-lg  font-bold px-1">للإنتقال للنطاق الأخضر المتوسط</legend>
+                <div class="w-full md:w-[60%] flex flex-col gap-5">
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>توظيف سعوديين بعدد</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>سيكون رصيد الاستقطاب</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                </div>
+                <div class="text-center sm:flex">
+                    <h4 class="text-center sm:flex sm:items-center py-2 px-2 text-sm font-medium">او</h4>
+                </div>
+                    <div class="w-full md:w-[60%] flex flex-col gap-5">
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>توظيف سعوديين بعدد</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>سيكون رصيد الاستقطاب</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                </div>
+        </fieldset>
+            </div>
+                <div class="">
+                <fieldset class="sm:flex border-[#A7A7A7] border py-2.5 md:py-2.5 px-2.5 md:px-2.5 rounded-lg">
+            <legend class="text-xs md:text-sm bg-[#669B2D] rounded-lg font-bold px-1">للإنتقال للنطاق الأخضر المرتفع</legend>
+                <div class="w-full md:w-[60%] flex flex-col gap-5">
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>توظيف سعوديين بعدد</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>سيكون رصيد الاستقطاب</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                </div>
+                <div class="text-center sm:flex">
+                    <h4 class="text-center sm:flex sm:items-center py-2 px-2 text-sm font-medium">او</h4>
+                </div>
+                    <div class="w-full md:w-[60%] flex flex-col gap-5">
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>توظيف سعوديين بعدد</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>سيكون رصيد الاستقطاب</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                </div>
+        </fieldset>
+            </div>
+                <div class="">
+                <fieldset class="sm:flex border-[#A7A7A7] border py-2.5 md:py-2.5 px-2.5 md:px-2.5 rounded-lg">
+            <legend class="text-xs md:text-sm bg-[#C5C5C5] rounded-lg font-bold px-1">للإنتقال للنطاق البلاتيني</legend>
+                <div class="w-full md:w-[60%] flex flex-col gap-5">
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>توظيف سعوديين بعدد</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>سيكون رصيد الاستقطاب</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                </div>
+                <div class="text-center sm:flex">
+                    <h4 class="text-center sm:flex sm:items-center py-2 px-2 text-sm font-medium">او</h4>
+                </div>
+                    <div class="w-full md:w-[60%] flex flex-col gap-5">
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>توظيف سعوديين بعدد</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                    <div class="text-xs flex justify-evenly items-center rounded">
+                        <p>سيكون رصيد الاستقطاب</p>
+                        <p class="max-w-[40%] min-w-[53px] my-1 bg-sky-200 p-[2px] text-xs rounded text-center">25</p>
+                    </div>
+                </div>
+        </fieldset>
+            </div>
+        </div>
     </section>
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
